Body bottom gap fixed. EPSG:4326 for cdnStreamFlow improved

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,7 +19,7 @@
  *= require service
  */
 
-html, body {
+html {
   height: 100%;
 }
 
